--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<p>I honestly never thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different types of roles within the tech industry, all thanks the great information superhighway itself!</p>
 								<p>I’ve now come to realize that my knowledge and interest in cognitive of psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about working as a developer.</p>
 								<p>-It could also just be the fact that I get to create COOL stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after hours of panic, that it was all because you forgot to put a bracket or a semicolon somewhere).</p>
-								<span class="image main"><img src="images/salt_flats.jpg" alt="Salt Flats" /></span>
+								<span class="image main"><img src="images/Salt_flats.jpg" alt="Salt Flats" /></span>
 							</article>
 
 						<!-- Contact -->
