--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head>
 		<title>Josh Sturgess</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="http://joshsturgess.com/favicon.ico">
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
