--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Josh Sturgess</title>
+		<title>joshsturgess.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="http://joshsturgess.com/favicon.ico">
@@ -28,14 +28,15 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1 class="slide-horizontal" data-splitting>Josh Sturgess</h1>
-								<p>I am a Front End Developer who can also design,<br /> with an emphasis in usability, interaction design, and psychology.</p>
+								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt</h1>
+								<p><b>FRONT END DEVELOPER</b> <span class="midMid" style="text-align:center";>&nbsp;||&nbsp;</span> <b>UX/UI DESIGNER</b> <br /> 
+									with an emphasis in <b>usability</b>, <b>interaction-design</b>, and <b>conversion-rate</b> optimization.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Skills</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Examples</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -49,7 +50,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Skills:</h2>
-								<p>I figured this was more fun than simply creating an unordered list.<br> Move it around! Zoom in/out!<p>
+								<p>More fun than your typical unordered list. Move it around! Zoom in/out!<br>
+									<b>SLOWER</b> : Move Towards Center <span class="midMid" style="text-align:center";>&nbsp;||&nbsp;</span> <b>FASTER</b> : Move Away From Center.</p>
+					
 
 
 								<div id="myCanvasContainer">
@@ -91,23 +94,23 @@
 								<h2 class="major">Murphy Door React.JS Demo</h2>
 								<span class="image main"><a href="https://josh-sturgess.github.io/murphyDoorDemo/" target="_blank"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></a></span>
 								<p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
-								<p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a front-end demo using only JavaScript to prove that I can write code. I have been trying to learn React lately anyway, so this served a welcome challenge for me.</p>
+								<p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things just by writing code. I have been trying to learn React lately anyway, so this served a welcome challenge for me.</p>
 
 								<h2 class="major">Film Score Portfolio</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
 								<p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really appreciate how it works by adhering to the rules of HTML and CSS, despite a bit of a learning curve. You can choose to export your designs as clean code, where you can edit or add custom programing and host the site wherever you choose.</p>
-								<p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. The background video is some edited footage of a vinyl record spinning. I created the logo animation by splitting each piece into a separate SVG file and timing the movements with JavaScript. The "Down Arrow" on the landing page is inside a div with a mesh speaker grill as the background, with some light CSS shadowing.</p>
-								<p>If you make your browser as narrow as possible, you will see that I animated the mobile "hamburger" menu and placed it inside an SVG speaker cone that rotates in/out while the mobile menu slides into place. The rest of the site is currently unresponsive to mobile because I was in the middle of changing the layout breakpoints using CSS grid, but had to place the project on hold for now due to unrelated issues.</p>
+								<p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. The background video is footage that I edited of a vinyl record spinning. I created the logo animation by splitting each piece into a separate SVG file, and then using a <b>$(window).load(function(){});</b>  and sequential CSS3 Transforms. The "Down Arrow" on the landing page is inside a div with a mesh speaker grill as the background, with some light CSS shadowing.</p>
+								<p>If you make your browser as narrow as possible, you will see that I animated the mobile "hamburger" menu and placed it inside an SVG speaker cone that rotates in/out while the mobile menu slides into place. The rest of the site is currently unresponsive to mobile because I was in the middle of changing the layout breakpoints using CSS grid, but had to place the project on hold for now due to <i>unrelated</i> issues.</p>
 
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<p>I'm a Developer who truly understands the nuances of design thinking, with formal training and proficiency in both disciplines. My priority will always be maintaining integrity while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software developers and designers, by being sypmathetic to differing perspectives, and through increasing the effective communication and collaboration between various roles and departments.</p>
-								<p>I honestly never thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different types of roles within the tech industry, all thanks the great information superhighway itself!</p>
-								<p>I’ve now come to realize that my knowledge and interest in cognitive of psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about working as a developer.</p>
-								<p>-It could also just be the fact that I get to create COOL stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after hours of panic, that it was all because you forgot to put a bracket or a semicolon somewhere).</p>
+								<p>I'm a Developer who truly understands the nuances of design thinking, with formal (and informal) training and proficiency in both disciplines. My priority will always be maintaining integrity while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software development and design, by sympathizing with differing perspectives, and by increasing the collaboration between differing roles.</p>
+								<p>I honestly <i>never</i> thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different roles within the tech industry, all thanks the great information superhighway itself!</p>
+								<p>I’ve now come to realize that my knowledge and interest in psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about working as a software developer.</p>
+								<p>-It <i>could</i> also just be the fact that I get to create <b>COOL</b> stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after hours of <b>PANIC</b>, that it was all because you forgot to put a bracket or a semicolon somewhere).</p>
 								<span class="image main"><img src="images/Salt_flats.jpg" alt="Salt Flats" /></span>
 							</article>
 
