--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 
 <html>
 	<head>
-		<title>Josh Sturgess</title>
+		<title>joshsturgess.com</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#000000">
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,14 +34,15 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1 class="slide-horizontal" data-splitting>Josh Sturgess</h1>
-								<p>I am a Front End Developer who can also design,<br /> with an emphasis in usability, interaction design, and psychology.</p>
+								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt;</h1>
+								<p><b>Front End Developer</b> <span class="divider" style="text-align: center;"> &nbsp;||&nbsp; </span> <b>UX/UI Designer</b> <br />
+									with an emphasis in <b>usability</b>, <b>interaction design</b>, and <b>conversion-rate</b> optimization.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Skills</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Examples</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -48,11 +56,14 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Skills:</h2>
-								<p>I figured this was more fun than simply creating an unordered list.<br> Move it around! Zoom in/out!<p>
+								<div style="text-align: center";>
+								<p>More fun than your typical unordered list. Move it around! Zoom in/out!<br>
+								<b>SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp||&nbsp </span><b>FASTER</b> : Move Away From Center.</p>
+								</div>
 
 
 								<div id="myCanvasContainer">
-						      <canvas width="500" height="500" id="myCanvas">
+						      <canvas width="500" height="500" id="myCanvas" style="width: 100%">
 						        <ul>
 						          <li> <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML5</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS3</a></li>
@@ -85,34 +96,37 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="work" style="height: 100%";>
 
-								<h2 class="major">Murphy Door React.JS Demo</h2>
-								<span class="image main"><a href="https://josh-sturgess.github.io/murphyDoorDemo/" target="_blank"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></a></span>
-								<p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
-								<p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a front-end demo using only JavaScript to prove that I can write code. I have been trying to learn React lately anyway, so this served a welcome challenge for me.</p>
 
-								<h2 class="major">Film Score Portfolio</h2>
+								<h2 class="major" style="max-width: 100%";>Murphy Door ReactJS Demo</h2>
+
+
+						 		<span class="image main"><a href="https://josh-sturgess.github.io/murphyDoorDemo/" target="_blank"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></a></span>
+<p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
+<p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a simple front-end demo using JavaScript/React components to prove that I can write and build things just by writing code. I have been trying to learn React lately anyway, so this served as a welcome challenge for me.</p>
+
+								<h2 class="major" style="max-width: 100%";>Film Score Portfolio</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
-								<p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really appreciate how it works by adhering to the rules of HTML and CSS, despite a bit of a learning curve. You can choose to export your designs as clean code, where you can edit or add custom programing and host the site wherever you choose.</p>
-								<p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. The background video is some edited footage of a vinyl record spinning. I created the logo animation by splitting each piece into a separate SVG file and timing the movements with JavaScript. The "Down Arrow" on the landing page is inside a div with a mesh speaker grill as the background, with some light CSS shadowing.</p>
-								<p>If you make your browser as narrow as possible, you will see that I animated the mobile "hamburger" menu and placed it inside an SVG speaker cone that rotates in/out while the mobile menu slides into place. The rest of the site is currently unresponsive to mobile because I was in the middle of changing the layout breakpoints using CSS grid, but had to place the project on hold for now due to unrelated issues.</p>
+<p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really came to appreciate how it works by using semantic HTML and CSS, despite a bit of a learning curve. You can export your designs as clean code, add/edit custom programming, and host the site wherever you choose.</p>
+<p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. I created the logo animation by splitting each piece into separate SVG files, then using a $(window).load(function(); and sequential CSS3 Transforms. The background video is some footage I edited of a vinyl record spinning. The "Down Arrow" on the landing page has a mesh speaker grill as the background, with some light CSS shadowing.</p>
+<p>If you make your browser as narrow as possible when you arrive to the live site, you will see that I animated the mobile "hamburger" menu and placed it inside of a speaker cone that rotates in/out while the mobile menu slides into place. I take pride in my ability to conceptualize and implement custom-tailored themes and solutions to enhance the branding of any business. The rest of the site is currently unresponsive to mobile devices because I was in the middle of changing the layout breakpoints using CSS grid, but ultimately chose to place the project on hold due to <i>unrelated</i> issues.</p>
 
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
-								<p>I'm a Developer who truly understands the nuances of design thinking, with formal training and proficiency in both disciplines. My priority will always be maintaining integrity while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software developers and designers, by being sypmathetic to differing perspectives, and through increasing the effective communication and collaboration between various roles and departments.</p>
-								<p>I honestly never thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different types of roles within the tech industry, all thanks the great information superhighway itself!</p>
-								<p>I’ve now come to realize that my knowledge and interest in cognitive of psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about working as a developer.</p>
-								<p>-It could also just be the fact that I get to create COOL stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after hours of panic, that it was all because you forgot to put a bracket or a semicolon somewhere).</p>
-								<span class="image main"><img src="images/salt_flats.jpg" alt="Salt Flats" /></span>
+								<h2 class="major">About:</h2>
+<p>I'm a Developer who also understands the nuances of "design-thinking," with formal (and informal) training and proficiency in both disciplines. My priority will always be maintaining integrity, while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software engineering and design, by sympathizing with differing perspectives, and by increasing collaboration between differing roles.</p>
+<p>I honestly <i>never</i> thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different roles within the tech industry, all thanks the great information superhighway itself!</p>
+<p>I’ve now come to realize that my knowledge and interest in psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about my career as a developer.</p>
+								<p>-It <i>could</i> also just be the fact that I get to create <b>COOL</b> stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after HOURS of <b>PANIC</b>, that it was all because you forgot to put a bracket or a semicolon somewhere).</p>
+								<span class="image main"><img src="images/Salt_flats.jpg" alt="Salt Flats" /></span>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">Contact:</h2>
 								<form method="post" action="https://formspree.io/joshsturgessdesigns@gmail.com" method="POST">
 									<div class="fields">
 										<div class="field half">
