--- a/index.html
+++ b/index.html
@@ -97,12 +97,19 @@
 
 						<!-- Work -->
 							<article id="work" style="height: 100%";>
+								
+								<h2 class="major" style="max-width: 100%";>Custom CSS Design</h2>
+
+
+						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
+<p>This is just a good example of my command over modern CSS styling. As a front-end developer, I wanted to demonstrate my ability to improvise the design of elements <b>by coding</b> instead of designing a mock-up in Photoshop/Sketch and then... <i>handing it off to someone like me.</i></p>
+
 
 
 								<h2 class="major" style="max-width: 100%";>Murphy Door ReactJS Demo</h2>
 
 
-						 		<span class="image main"><a href="https://josh-sturgess.github.io/murphyDoorDemo/" target="_blank"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></a></span>
+						 		<span class="image main"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></span>
 <p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
 <p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a simple front-end demo using JavaScript/React components to prove that I can write and build things just by writing code. I have been trying to learn React lately anyway, so this served as a welcome challenge for me.</p>
 
