--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
-<p>This is just a good example of my command over modern CSS styling. As a front-end developer, I wanted to demonstrate my ability to improvise the design of elements <b>by coding</b> instead of designing a mock-up in Photoshop/Sketch and then... <i>handing it off to someone like me.</i></p>
+<p>This is just a good example of my command over modern CSS styling. As a front-end developer, I wanted to demonstrate my ability to improvise the styling of elements <b>by coding,</b> instead of having a UI designer iterate mock-ups in Photoshop/Sketch and then... hand it off to <i>someone like me.</i></p>
 
 
 
