--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<h2 class="major">Murphy Door React.JS Demo</h2>
 								<span class="image main"><a href="https://josh-sturgess.github.io/murphyDoorDemo/" target="_blank"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></a></span>
 								<p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
-								<p>I could have made something better-looking in visual design software first (and with more time), but I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things just by writing code. I have been trying to learn React lately anyway, so this served a welcome challenge for me.</p>
+								<p>I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things without visual design tools, just by writing code. I have been trying to learn React lately anyway, so this served a welcome challenge for me.</p>
 
 								<h2 class="major">Film Score Portfolio</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
