--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
-<p>This is just a good example of my command over modern CSS attributes, including transitions and animations. As a front-end developer, I wanted to demonstrate my ability to improvise the styling of elements myself <b>by coding,</b> instead of having a designer iterate mock-ups in Photoshop/Sketch, and then have to hand it off... <i>to someone like <b>me.</b></i></p>
+<p>This is a good example of my command over modern CSS attributes, including transitions and animations. As a front-end developer, I wanted to demonstrate my ability to improvise and style elements on the spot <b>by coding,</b> instead of having a designer iterate mock-ups in Photoshop/Sketch, and then having to hand it off... <i>to someone like <b>me.</b></i></p>
 
 
 
