--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-
+						<h5 "slide-horizontal" data-splitting>Josh Sturgess Designs© 2018</h5> 
 					</footer>
 				</div>
 
