--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<h5 "slide-horizontal" data-splitting>Josh Sturgess Designs© 2018</h5> 
+						<h4 class="class="flip-3d split-it"" data-splitting>Josh Sturgess Designs© 2018</h4> 
 					</footer>
 				</div>
 
