--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Skills</h2>
+								<h2 class="major">Skills:</h2>
 								<div style="text-align: center";>
 								<p>More fun than your typical unordered list. Move it around! Zoom in/out!<br>
 								<b>SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp||&nbsp </span><b>FASTER</b> : Move Away From Center</p>
@@ -102,7 +102,7 @@
 						<!-- Work -->
 							<article id="work" style="height: 100%";>
 								
-								<h2 class="major" style="max-width: 100%";>Custom CSS Design</h2>
+								<h2 class="major" style="max-width: 100%";>Custom CSS Design:</h2>
 
 
 						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
@@ -110,14 +110,14 @@
 
 
 
-								<h2 class="major" style="max-width: 100%";>Murphy Door ReactJS Demo</h2>
+								<h2 class="major" style="max-width: 100%";>Murphy Door ReactJS Demo:</h2>
 
 
 						 		<span class="image main"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></span>
 <p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
 <p>I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things without visual design tools, just by writing code. I have been trying to practice programming in React lately anyway, so this served as a welcome challenge for me.</p>
 
-								<h2 class="major" style="max-width: 100%";>Film Score Portfolio</h2>
+								<h2 class="major" style="max-width: 100%";>Film Score Portfolio:</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
 <p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really came to appreciate how it works by using semantic HTML and CSS, despite a bit of a learning curve. You can export your designs as clean code, add/edit custom programming, and host the site wherever you choose.</p>
 <p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. I created the logo animation by splitting each piece into separate SVG files, then using a $(window).load(function(); and sequential CSS3 Transforms. The background video is some footage I edited of a vinyl record spinning. The "Down Arrow" on the landing page has a mesh speaker grill as the background, with some light CSS shadowing.</p>
@@ -137,7 +137,7 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">Contact:</h2>
 								<form method="post" action="https://formspree.io/joshsturgessdesigns@gmail.com" method="POST">
 									<div class="fields">
 										<div class="field half">
