--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h2 class="major">Skills:</h2>
 								<div style="text-align: center";>
 								<p>More fun than your typical unordered list. Move it around! Zoom in/out!<br>
-								<b>SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp||&nbsp </span><b>FASTER</b> : Move Away From Center</p>
+								<b style="color: #08fcd7;">SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp||&nbsp </span><b style="color: #08fcd7;">FASTER</b> : Move Away From Center</p>
 								</div>
 
 
