--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div id="particles-js"></div>
 
 				<!-- Header -->
-				<div id="content">
+				<div id="content" style="max-height: 100vh;">
 					<header id="header">
 						<div class="logo">
 							<span><img src="images/J.svg"></span>
@@ -58,16 +58,16 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="intro" style="height: 100%;">
 								<h2 class="major">Skills:</h2>
-								<div style="text-align: center";>
+								<div style="text-align: center;">
 								<p>More fun than your typical unordered list. Move it around! Zoom in/out!<br>
-								<b style="color: rgba(8, 252, 215, .8);">SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp||&nbsp </span><b style="color: rgba(8, 252, 215, .8);">FASTER</b> : Move Away From Center</p>
+								<b style="color: rgba(8, 252, 215, .75);">SLOWER</b> : Move Towards Center <span class="divider" style="text-align: center;"> &nbsp<b>||</b>&nbsp </span><b style="color: rgba(8, 252, 215, .75);">FASTER</b> : Move Away From Center</p>
 								</div>
 
 
 								<div id="myCanvasContainer">
-						      <canvas width="500" height="500" id="myCanvas" style="width: 100%">
+						      <canvas width="500" height="500" id="myCanvas" style="width: 100%;">
 						        <ul>
 						          <li> <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML5</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS3</a></li>
@@ -100,9 +100,9 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work" style="height: 100%";>
+							<article id="work" style="height: 100%;">
 								
-								<h2 class="major" style="max-width: 100%";>Custom CSS Design:</h2>
+								<h2 class="major" style="max-width: 100%;">Custom CSS Design:</h2>
 
 
 						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
@@ -110,14 +110,14 @@
 
 
 
-								<h2 class="major" style="max-width: 100%";>Murphy Door ReactJS Demo:</h2>
+								<h2 class="major" style="max-width: 100%;">Murphy Door ReactJS Demo:</h2>
 
 
 						 		<span class="image main"><img src="images/MurphyDoorDemo.jpg" alt="MurphyDoorDemo" /></span>
 <p>ReactJS is currently the leading technology for developing modern user interfaces, and would be a great option for your company to implement if you decide to update or migrate your website. This is especially true if you consider the increasing amount of people who will be viewing and shopping from a mobile device.</p>
 <p>I decided to piece together a simple front-end demo using JavaScript and Bootstrap to show that I can build things without visual design tools, just by writing code. I have been trying to practice programming in React lately anyway, so this served as a welcome challenge for me.</p>
 
-								<h2 class="major" style="max-width: 100%";>Film Score Portfolio:</h2>
+								<h2 class="major" style="max-width: 100%;">Film Score Portfolio:</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
 <p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really came to appreciate how it works by using semantic HTML and CSS, despite a bit of a learning curve. You can export your designs as clean code, add/edit custom programming, and host the site wherever you choose.</p>
 <p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. I created the logo animation by splitting each piece into separate SVG files, then using a $(window).load(function(); and sequential CSS3 Transforms. The background video is some footage I edited of a vinyl record spinning. The "Down Arrow" on the landing page has a mesh speaker grill as the background, with some light CSS shadowing.</p>
@@ -126,17 +126,17 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="about" style="height: 100%;">
 								<h2 class="major">About:</h2>
 <p>I'm a Web and Software Developer who also understands the nuances of "design-thinking," with formal (and informal) training and proficiency in both disciplines. My priority will always be maintaining integrity, while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software engineering and design, by understanding and sympathizing with differing perspectives, and by encouraging collaboration between differing roles.</p>
 <p>I honestly <i>never</i> thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different roles within the tech industry, all thanks the great information superhighway itself!</p>
 <p>I’ve now come to realize that my knowledge and interest in psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about my career as a software developer.</p>
-								<p>-It <i>could</i> also just be the fact that I get to create <b class="bounce-it" style="font-size: 2em; color: #08fcd7; letter-spacing: 6.66px;" data-splitting>COOL</b> stuff, while genuinely enjoying what I get to do for work each day (...except for when something inevitably refuses to work... and then you realize, after HOURS of <b class="fall-out" style="font-size: 1.5em; color: #fe0b56; letter-spacing: 3.33px; text-shadow: 5px 5px 1px #fff;" data-splitting>PANIC</b>, that it was all because you forgot to put a bracket or a semicolon somewhere...) ¯\_(ツ)_/¯</p>
+								<p>-It <i>could</i> also just be the fact that I get to create <b class="bounce-it" style="font-size: 2em; color: #08fcd7; letter-spacing: 5px;" data-splitting>&nbsp;COOoOoOOL</b> stuff, while genuinely enjoying what I get to do for work each day ...except for when something inevitably refuses to work... and then you realize, after HOURS of <b class="fall-out" style="font-size: 2em; color: #fe0b56; letter-spacing: 5px; text-shadow: 0px .5px 1px #fff;" data-splitting>PANIC</b>... that it was all because you forgot to put a bracket or a semicolon somewhere... ¯\_(ツ)_/¯</p>
 								<span class="image main"><img src="images/Salt_flats.jpg" alt="Salt Flats" /></span>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="contact" style="height: 100%;">
 								<h2 class="major">Contact:</h2>
 								<form method="post" action="https://formspree.io/joshsturgessdesigns@gmail.com" method="POST">
 									<div class="fields">
@@ -410,7 +410,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<h4 class="flip-3d split-it" data-splitting>Josh Sturgess Designs© 2018</h4> 
+						<h4 class="flip-3d split-it" style="font-size: 0.85rem; letter-spacing: .5em;" data-splitting>Josh Sturgess Designs© 2018</h4> 
 					</footer>
 				</div>
 
