--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div id="particles-js"></div>
 
 				<!-- Header -->
-				<div id="content" style="max-height: 100vh;">
+				<div id="content">
 					<header id="header">
 						<div class="logo">
 							<span><img src="images/J.svg"></span>
@@ -131,7 +131,7 @@
 <p>I'm a Web and Software Developer who also understands the nuances of "design-thinking," with formal (and informal) training and proficiency in both disciplines. My priority will always be maintaining integrity, while ensuring the best user experience possible for the end product. My goal is to serve as a bridge between software engineering and design, by understanding and sympathizing with differing perspectives, and by encouraging collaboration between differing roles.</p>
 <p>I honestly <i>never</i> thought that I would be a computer programmer "when I grew up," due to the common stereotypes that, of course, all sounded like the total opposite of my personality. Eventually though, I got curious and discovered so much more about all of the different roles within the tech industry, all thanks the great information superhighway itself!</p>
 <p>I’ve now come to realize that my knowledge and interest in psychology, my tendency to analyze and problem-solve every little thing, my strong sense of empathy, my perfectionism (and mild OCD) that I can pass off as part of my "work ethic," and even my artistic abilities are actually the traits that make this career perfect for me. The more that I learn and continue to expand my skillset, the more excited I become about my career as a software developer.</p>
-								<p>-It <i>could</i> also just be the fact that I get to create <b class="bounce-it" style="font-size: 1.5em; color: #08fcd7; letter-spacing: 5px;" data-splitting>&nbsp;COOoOoOOL</b> stuff, while genuinely enjoying what I get to do for work each day ...except for when something inevitably refuses to work... and then you realize, after HOURS of <b class="fall-out" style="font-size: 1.5em; color: #fe0b56; letter-spacing: 5px; text-shadow: 0px .5px 1px #fff;" data-splitting>PANIC</b>... that it was all because you forgot to put a bracket or a semicolon somewhere... ¯\_(ツ)_/¯</p>
+								<p>-It <i>could</i> also just be the fact that I get to create <b class="bounce-it" style="font-size: 1.5em; color: #08fcd7; letter-spacing: 5px;" data-splitting> &nbsp;COOoOoOOL</b> stuff, while genuinely enjoying what I get to do for work each day ...except for when something inevitably refuses to work... and then you realize, after HOURS of <b class="fall-out" style="font-size: 2em; color: #fe0b56; letter-spacing: 5px; text-shadow: 0px .25px .333px #fff;" data-splitting> %nbsp;PANIC</b>... that it was all because you forgot to put a bracket or a semicolon somewhere... ¯\_(ツ)_/¯</p>
 								<span class="image main"><img src="images/Salt_flats.jpg" alt="Salt Flats" /></span>
 							</article>
 
