--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt;</h1>
-								<p><b>Front End Engineer</b> <span class="divider" style="text-align: center;"> &nbsp;||&nbsp; </span> <b>UX/UI Designer</b> <br />
+								<p><b>Front End Engineer</b> <span class="divider" style="text-align: center;"> &nbsp;and&nbsp; </span> <b>UX/UI Designer</b> <br />
 									with an emphasis in <b>usability</b>, <b>interaction design</b>, and <b>conversion-rate</b> optimization.</p>
 							</div>
 						</div>
