--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					};
 			</script>
 
-			<script src="particles.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 			<script src="app.js"></script>
 			<script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 			<script> Splitting(); </script>
