--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<meta name="theme-color" content="#000000">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="jw4YEem-JuI3H1Fed4bFIG0-fk0_ISlMxdx65AFuogY" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
 		<link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
