--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<h4 class="flip-3d split-it" style="font-size: 0.85rem; letter-spacing: .5em;" data-splitting>Josh Sturgess Designs© 2019</h4> 
+						<h4 class="flip-3d split-it" style="position: relative; z-index: 333; font-size: 0.85rem; letter-spacing: .5em;" data-splitting>Josh Sturgess Designs© 2019</h4> 
 					</footer>
 				</div>
 
