--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 						          <li> <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML5</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS3</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">Information Architecture</a></li>
-						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">PWA</a></li>
+						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">[✖‿✖]</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">Usability Testing</a></li>
 						          <li><a data-weight="25" href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a></li><li><a data-weight="24" href="https://en.wikipedia.org/wiki/Representational_state_transfer" target="_blank">REST API</a></li>
 						          <li><a data-weight="21" href="https://en.wikipedia.org/wiki/Ajax_(programming)" target="_blank">AJAX</a></li>
-						          <li><a data-weight="14" href="https://en.wikipedia.org/wiki/JSON" target="_blank">JSON</a></li><li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">React JS</a></li>
+						          <li><a data-weight="14" href="https://en.wikipedia.org/wiki/JSON" target="_blank">JSON</a></li><li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">React</a></li>
 						          <li><a data-weight="27" href="https://en.wikipedia.org/wiki/AngularJS" target="_blank">Webflow</a></li>
 						          <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress" target="_blank">Shopify Partner</a></li><li><a data-weight="22" href="https://en.wikipedia.org/wiki/PHP" target="_blank">Jquery</a></li>
-						          <li><a data-weight="22" href="https://en.wikipedia.org/wiki/MySQL" target="_blank">PostgreSQL</a></li><li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Node JS</a></li>
+						          <li><a data-weight="22" href="https://en.wikipedia.org/wiki/MySQL" target="_blank">PostgreSQL</a></li><li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Node.js</a></li>
 						          <li><a data-weight="17" href="https://en.wikipedia.org/wiki/Git" target="_blank">Git</a></li><li><a data-weight="17" href="https://en.wikipedia.org/wiki/Underscore.jst" target="_blank">Josh Sturgess</a></li>
 						          <li><a data-weight="17" href="http://handlebarsjs.com/" target="_blank">Express.js</a></li>
 						          <li><a data-weight="20" href="https://vuejs.org/" target="_blank">Babel</a></li><li><a data-weight="23" href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">Bootstrap</a></li>
