--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 						          <li><a data-weight="21" href="https://en.wikipedia.org/wiki/Ajax_(programming)" target="_blank">AJAX</a></li>
 						          <li><a data-weight="14" href="https://en.wikipedia.org/wiki/JSON" target="_blank">JSON</a></li><li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">React</a></li>
 						          <li><a data-weight="27" href="https://en.wikipedia.org/wiki/AngularJS" target="_blank">Webflow</a></li>
-						          <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress" target="_blank">Shopify Partner</a></li><li><a data-weight="22" href="https://en.wikipedia.org/wiki/PHP" target="_blank">Jquery</a></li>
+						          <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress" target="_blank">Shopify Certified</a></li><li><a data-weight="22" href="https://en.wikipedia.org/wiki/PHP" target="_blank">Jquery</a></li>
 						          <li><a data-weight="22" href="https://en.wikipedia.org/wiki/MySQL" target="_blank">PostgreSQL</a></li><li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js" target="_blank">Node.js</a></li>
 						          <li><a data-weight="17" href="https://en.wikipedia.org/wiki/Git" target="_blank">Git</a></li><li><a data-weight="17" href="https://en.wikipedia.org/wiki/Underscore.jst" target="_blank">Josh Sturgess</a></li>
 						          <li><a data-weight="17" href="http://handlebarsjs.com/" target="_blank">Express.js</a></li>
 						          <li><a data-weight="20" href="https://vuejs.org/" target="_blank">Babel</a></li><li><a data-weight="23" href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">Bootstrap</a></li>
 						          <li><a data-weight="15" href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)" target="_blank">SASS</a></li>
 						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/JQuery" target="_blank">Photoshop</a></li><li><a data-weight="19" href="http://mongoosejs.com/" target="_blank">Illustrator</a></li>
-						          <li><a data-weight="19" href="https://karma-runner.github.io/1.0/index.html" target="_blank">Animation</a></li><li><a data-weight="19" href="http://gulpjs.com/" target="_blank">Gulp</a></li>
+						          <li><a data-weight="19" href="https://karma-runner.github.io/1.0/index.html" target="_blank">Motion Graphics</a></li><li><a data-weight="19" href="http://gulpjs.com/" target="_blank">Gulp</a></li>
 						          <li><a data-weight="19" href="https://www.npmjs.com/" target="_blank">NPM</a></li><li><a data-weight="19" href="https://bower.io/" target="_blank">Adobe XD</a></li>
-						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/BEM" target="_blank">UI Development</a></li><li><a data-weight="19" href="https://en.wikipedia.org/wiki/Magento" target="_blank">Custom Ecommerce</a></li>
+						          <li><a data-weight="19" href="https://en.wikipedia.org/wiki/BEM" target="_blank">【=◈︿◈=】</a></li><li><a data-weight="19" href="https://en.wikipedia.org/wiki/Magento" target="_blank">Custom Ecommerce</a></li>
 						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">User Experience</a></li>
 						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">¯\_(ツ)_/¯</a></li>
 						          <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Drupal" target="_blank">Redux</a></li>
