--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
 						 		<span class="image main"><img src="images/csslandingpage.jpg" alt="customcss" /></span>
-<p>This is a good example of my command over modern CSS attributes, including interactive transitions and animations. As a front-end developer, I wanted to demonstrate my ability to improvise and design elements on the spot <b>by coding,</b> instead of having to rely on a UI designer to iterate mock-ups in Photoshop/Sketch, and then having to hand it off... <i>to someone like <b>me.</b></i></p>
+<p>This is a good example of my command over modern CSS attributes, including interactive transitions and animations. As a front-end developer, I wanted to demonstrate my ability to improvise and design elements on the spot <b>by coding,</b> instead of having to always rely on a UI designer to iterate mock-ups in Photoshop/Sketch, and then having to hand it off... <i><b>to a developer.</b></i></p>
 
 
 
