--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			
 
 
-			<script src="./tagcanvas.js"></script>
+			<script src="http://www.goat1000.com/jquery.tagcanvas.min.js?2.9"></script>
 			<script type="text/javascript">
 					var options = {
 					 textColour: '#2dfcd8',
