--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			
 
 
-			<script src="tagCanvas.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/jquery-tagcanvas@2.9.0/jquery.tagcanvas.min.js"></script>
 			<script type="text/javascript">
 					var options = {
 					 textColour: '#2dfcd8',
