--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 class="slide-horizontal" data-splitting>&lt;/Josh-Sturgess&gt;</h1>
-								<p><b>Front End Engineer</b> <span class="divider" style="text-align: center;"> and </span> <b>UX/UI Designer</b> <br />
+								<p><b>UI Developer</b> <span class="divider" style="text-align: center;"> and </span> <b>Interaction Designer</b> <br />
 									with an emphasis in <b>usability</b>, <b>interaction design</b>, and <b>conversion-rate</b> optimization.</p>
 							</div>
 						</div>
@@ -120,9 +120,8 @@
 
 								<h2 class="major" style="max-width: 100%;">Film Score Portfolio:</h2>
 								<span class="image main"><a href="https://webflow.com/website/dillonkellyportfolio" target="_blank"><img src="images/DKportfolio.jpg" alt="Sound Designer's Portfolio" /></a></span>
-<p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really came to appreciate how it works by using semantic HTML and CSS, despite a bit of a learning curve. You can export your designs as clean code, add/edit custom programming, and host the site wherever you choose.</p>
-<p>I made every piece of this from scratch. The layout, the user interface components, the animations, the graphic design on the images, etc. were all made by me. I created the logo animation by splitting each piece into separate SVG files, then using a $(window).load(function(); and sequential CSS3 Transforms. The background video is some footage I edited of a vinyl record spinning. The "Down Arrow" on the landing page has a mesh speaker grill as the background, with some light CSS shadowing.</p>
-<p>If you make your browser as narrow as possible when you arrive to the live site, you will see that I animated the mobile "hamburger" menu and placed it inside of a speaker cone that rotates in/out while the mobile menu slides into place. I take pride in my ability to conceptualize and implement custom-tailored themes and solutions to enhance the branding of any business.</p>
+<p>An aquaintence needed a way to showcase his sound design work and further his career in the film industry. I tried out Webflow and really came to appreciate how it works by using semantic HTML and CSS, despite a bit of a learning curve. You can export your designs as clean code, add/edit custom JavaScript, and host the site wherever you choose.</p>
+
 
 							</article>
 
